Fixed comments